--- a/src/components/pokemon-card/pokemonCard.module.css
+++ b/src/components/pokemon-card/pokemonCard.module.css
@@ -30,7 +30,7 @@
 }
 
 .pokemonCard.active {
-    transform: rotateY(0deg);
+    animation: flipFront 1000ms 300ms forwards;
 }
 
 .cardFront,
@@ -218,4 +218,13 @@
     left: 50%;
     transform: translate(-50%, 0);
     bottom: 0;
+}
+
+@keyframes flipFront {
+    from {
+        transform: rotateY(180deg);
+    }
+    to {
+        transform: rotateY(0deg);
+    }
 }
