--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,8 +1,8 @@
 .wrap {
   min-height: calc(100vh - 100px);
-  /* padding: 96px 32px 24px; */
+  padding: 96px 32px 24px;
 }
 
 .wrap.isHomePage {
-    /* padding: 0; */
+    padding: 0;
 }
