--- a/src/components/pokemon-card/pokemonCard.module.css
+++ b/src/components/pokemon-card/pokemonCard.module.css
@@ -1,10 +1,3 @@
-.root {
-    width: 268px;
-    height: 388px;
-    margin: 16px;
-    perspective: 1000px;
-}
-
 .pokemonCard {
     --fire: #FDDFDF;
     --grass: #DEFDE0;
@@ -21,8 +14,8 @@
     --fighting: #E6E0D4;
     --normal:#F5F5F;
 
-    width: inherit;
-    height: inherit;
+    width: 100%;
+    height: 100%;
     position: relative;
     transform-style: preserve-3d;
     transition: .6s .1s;
@@ -31,6 +24,19 @@
 
 .pokemonCard.active {
     animation: flipFront 1000ms 300ms forwards;
+}
+
+@keyframes flipFront {
+    from {
+        transform: rotateY(180deg);
+    }
+    to {
+        transform: rotateY(0deg);
+    }
+}
+
+.pokemonCard.selected {
+    margin-top: -40px;
 }
 
 .cardFront,
@@ -82,6 +88,10 @@
 
 .wrap.back {
     z-index: -1;
+    background-image: url(../../images/card-back-side.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .cardBack {
@@ -218,13 +228,4 @@
     left: 50%;
     transform: translate(-50%, 0);
     bottom: 0;
-}
-
-@keyframes flipFront {
-    from {
-        transform: rotateY(180deg);
-    }
-    to {
-        transform: rotateY(0deg);
-    }
 }
