--- a/src/routes/game/routes/start/start.module.css
+++ b/src/routes/game/routes/start/start.module.css
@@ -1,6 +1,11 @@
 .flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 40px;
+}
+
+.card {
+    width: 100%;
+    height: 380px;
+    cursor: pointer;
 }
