--- a/src/routes/game/routes/board/board.module.css
+++ b/src/routes/game/routes/board/board.module.css
@@ -31,6 +31,7 @@
 }
 
 .card {
+    max-width: 18vw;
     max-height: 14.8vw;
     margin-top: -6vw;
 }
@@ -38,10 +39,19 @@
 .card:first-child {
     margin-top: 0;
 }
+
 .playerOne {
     position: absolute;
     top: 4.3vw;
     left: 5vw;
+    width: 250px;
+    height: 50.3vw;
+}
+
+.playerTwo {
+    position: absolute;
+    top: 4.3vw;
+    right: 5vw;
     width: 250px;
     height: 50.3vw;
 }
