--- a/src/components/PkemonCard/pokemonCard.module.css
+++ b/src/components/PkemonCard/pokemonCard.module.css
@@ -12,7 +12,7 @@
     --psychic: #eaeda1;
     --flying: #F5F5F5;
     --fighting: #E6E0D4;
-    --normal:#F5F5F;
+    --normal: rgba(233, 227, 233, 0.333);
 
     width: 100%;
     height: 100%;
@@ -23,7 +23,8 @@
 }
 
 .pokemonCard.active {
-    animation: flipFront 1000ms 300ms forwards;
+    transform: rotateY(0deg);
+
 }
 
 @keyframes flipFront {
@@ -161,6 +162,14 @@
     background-color: var(--normal);
 }
 
+.red {
+  background-color: #d988b2;
+}
+
+.blue {
+    background-color: #a8caea;
+
+}
 .pokemon .imgContainer {
     background-color: rgba(255, 255, 255, 0.6);
     border-radius: 50%;
