--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -7,16 +7,23 @@
     background-attachment: fixed;
 }
 
+button {
+    width: 200px;
+    height: 50px;
+    background-color: darkmagenta;
+}
+
 .root .wrapper {
+
     padding: 5rem 1rem 2rem;
     max-width: 1400px;
     margin: 0 auto;
 }
 
 .root article {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1rem;
+    padding: 3rem 0; 
+    grid-template-columns: repeat(4, 1fr); 
+     grid-gap: 1rem;
     padding: 3rem 0;
 }
 
