--- a/src/routes/game/routes/start/start.module.css
+++ b/src/routes/game/routes/start/start.module.css
@@ -1,6 +1,6 @@
-.flex {
+.grid {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, 18vw);
     grid-gap: 40px;
 }
 
