--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ body {
     font-size: 62.5%;
     font-family: 'Overlock', Arial, Helvetica, sans-serif;
     overflow-x: hidden;
+    margin-top: 0;
+    margin-bottom: 30px;
 }
 
 a,
