--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -10,6 +10,8 @@
 button {
     width: 200px;
     height: 50px;
+    margin-top: 0;
+    margin-bottom: 30px;
     background-color: darkmagenta;
 }
 
