--- a/src/routes/game/routes/start/start.module.css
+++ b/src/routes/game/routes/start/start.module.css
@@ -1,6 +1,6 @@
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, 18vw);
+    grid-template-columns: repeat(4, 18vw);
     grid-gap: 40px;
 }
 
@@ -8,4 +8,25 @@
     width: 100%;
     height: 380px;
     cursor: pointer;
+}
+
+button {
+    font-family: 'Overlock', Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    padding: 10px 20px;
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-size: 24px;
+    background-color: #df52b9;
+    opacity: 0.5;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+}
+
+button:hover {
+    background-color: #df52b9;
+    opacity: 1;
+
 }
