--- a/src/components/PkemonCard/pokemonCard.module.css
+++ b/src/components/PkemonCard/pokemonCard.module.css
@@ -23,8 +23,8 @@
 }
 
 .pokemonCard.active {
-    transform: rotateY(0deg);
-
+    /* transform: rotateY(0deg); */
+    animation: flipFront 1000ms 300ms forwards;
 }
 
 @keyframes flipFront {
@@ -177,6 +177,11 @@
     height: 140px;
     text-align: center;
     margin-bottom: 20px;
+}
+
+.pokemonCard:active .wrap.front::after,
+.pokemonCard:focus .wrap.front::after {
+    border-color: #f300b4;
 }
 
 .pokemon .imgContainer img {
