--- a/src/routes/game/routes/Loos/loos.module.css
+++ b/src/routes/game/routes/Loos/loos.module.css
@@ -16,7 +16,7 @@
 .title {
     font-size: 2.4rem;
     font-family: 'Overlock', Arial, Helvetica, sans-serif;
-    padding-top: 50px;
+    padding-top: 180px;
 }
 
 .subtitle {
@@ -37,9 +37,10 @@
     font-weight: bold;
     text-transform: uppercase;
     padding: 10px;
-    width: 150px;
-    height: 50px;
-    margin-bottom: 30px;
+    width: 180px;
+    height: 60px;
+    margin-top: 160px;
+    margin-bottom: 50px;
   }
   
   .button:hover {
