--- a/src/routes/game/routes/start/start.module.css
+++ b/src/routes/game/routes/start/start.module.css
@@ -1,32 +1,31 @@
 .grid {
-    display: grid;
-    grid-template-columns: repeat(4, 18vw);
-    grid-gap: 40px;
-    justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(4, 18vw);
+  grid-gap: 40px;
+  justify-content: center;
 }
 
 .card {
-    width: 100%;
-    height: 380px;
-    cursor: pointer;
+  width: 100%;
+  height: 380px;
+  cursor: pointer;
 }
 
 .button {
-    font-family: 'Overlock', Arial, Helvetica, sans-serif;
-    padding: 10px 20px;
-    width: 150px;
-    margin-top: 0;
-    margin-bottom: 50px;
-    font-size: 24px;
-    background-color: #df52b9;
-    opacity: 1;
-    outline: none;
-    border: none;
-    border-radius: 10px;
+  background-color: #f300b4;
+  color: #fff;
+  border: 1px solid transparent;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 10px;
+  width: 180px;
+  height: 60px;
+  margin-bottom: 50px;
 }
 
 .button:hover {
-    background-color: #df52b9;
-    opacity: 0.5;
-
+  background-color: transparent;
+  color: #f300b4;
+  border: 1px solid #f300b4;
+  transition: .5s;
 }
